[JBWS-3927] Re-ordering dependencies and removing endorsing - tooling still to be cleaned